# ntt-rag

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  ollama-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
src/api/: app.py  app_services.py  router.py  schemas.py
src/config/: config.py
src/ingestion/: chunker.py  cleaner.py  loader.py  version_manager.py
src/rag/: llm.py  pipeline.py  prompt.py
src/scripts/: run_rag_smoke_test.py
src/vectorstore/: vectorstore.py  versioned_store.py
tests/: test_chunker.py  test_cleaner.py  test_config.py  test_llm_interface.py  test_pdf_loader.py  test_rag_pipeline.py  test_vectorstore.py  test_version_manager.py  test_versioned_store.py
tests/api/: conftest.py  test_api.py
